fix alignment

--- a/app/javascript/stylesheets/static-pages.css
+++ b/app/javascript/stylesheets/static-pages.css
@@ -1,4 +1,9 @@
 /* Support Us page, custom CSS */
 #support-us iframe {
   height: 100%;
+  max-width: 100%;
+}
+
+#support-us .opencollective-banner {
+  margin: auto;
 }
